--- a/css/sp-styles.css
+++ b/css/sp-styles.css
@@ -3,7 +3,7 @@
    width: 100vw;
    display: grid;
    grid-template-columns: 1fr;
-   grid-template-rows: 8rem 1fr;
+   grid-template-rows: 6rem 1fr;
 }
 
 .grid-2 {
@@ -15,8 +15,8 @@
 
 .sp-content {
    grid-column: 2/4;
-   padding-top: 2rem;
    overflow-y: scroll;
+   margin-top: 2rem;
 }
 
 .sp-content::-webkit-scrollbar {
@@ -531,9 +531,7 @@ width: 100%;
    }
 
    .sp-content {
-      grid-column: 2/3;
-      overflow-x: hidden;
-      margin: 0px auto;
+      grid-column: 2/3;      
    }
 
    .sp-container-1 {
