--- a/css/styles.css
+++ b/css/styles.css
@@ -117,7 +117,6 @@ a {
 .home-content {
    grid-column: 2/4;
    overflow-y: scroll;
-   padding-top: 1rem;
 }
 
 .home-content::-webkit-scrollbar {
@@ -146,13 +145,13 @@ header {
    justify-content: space-between;
    align-items: center;
    height: 6rem;
-   margin: 1.6rem auto 1rem auto;
+   margin: 1.6rem auto;
    padding-bottom: 1rem;
 }
 
 .tjn {
    font-family: 'HK Grotesk Regular';
-   max-height: 2.3rem;
+   max-height: 2rem;
 }
 
 .nav-menu {
@@ -265,11 +264,6 @@ li:hover .nav-link:hover:after {
 
 /* main & hero */
 
-.home-content {
-   grid-column: 2/4;
-   overflow: auto;
-}
-
 .hero {
    grid-row: 1/2;
    grid-column: 2/3;
@@ -281,6 +275,7 @@ li:hover .nav-link:hover:after {
    border-radius: 14px;
    padding: 6rem;
    padding-left: 16rem;
+   margin-top: 2rem;
    margin-bottom: 2rem;
 }
 
@@ -430,6 +425,7 @@ footer {
    justify-content: center;
    align-items: center;
    padding: 3rem;
+   text-align: center;
 }
 
 .social {
@@ -492,8 +488,6 @@ footer {
 
    .home-content {
       grid-column: 2/3;
-      overflow-y: scroll;
-      padding-top: 1em;
    }
 
    .tjn {
@@ -565,7 +559,6 @@ footer {
       transition: 0.3s;
       box-shadow:
          0 10px 27px rgba(0, 0, 0, 0.05);
-
    }
 
    .nav-menu.active {
